==> RT-Thread/rt-thread/bsp/hc32/libraries/hc32_drivers/drv_spi.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include "drv_spi.h"
#include "board_config.h"
#define LOG_TAG                         "drv.spi"
#include <drv_log.h>
#define SPI_MAX_DIV_VAL                 (0x7U)  /* Div256 */
    #define DMA_CH_REG(reg_base, ch)    (*(__IO uint32_t *)((uint32_t)(&(reg_base)) + ((ch) * 0x40UL)))

static rt_err_t hc32_spi_configure(struct rt_spi_device *device,
                                   struct rt_spi_configuration *configuration)
{
    RT_ASSERT(device != RT_NULL);
    RT_ASSERT(configuration != RT_NULL);

    struct hc32_spi *spi_drv =  rt_container_of(device->bus, struct hc32_spi, spi_bus);
    spi_drv->cfg = configuration;

    return hc32_spi_init(spi_drv, configuration);
}

static rt_ssize_t hc32_spi_xfer(struct rt_spi_device *device, struct rt_spi_message *message)
{
    int32_t state;
    rt_size_t message_length, already_send_length;
    rt_uint16_t send_length;
    rt_uint8_t *recv_buf;
    const rt_uint8_t *send_buf;
    rt_uint32_t u32TimeoutCnt;

    RT_ASSERT(device != RT_NULL);
    RT_ASSERT(device->bus != RT_NULL);
    RT_ASSERT(message != RT_NULL);

    struct hc32_spi *spi_drv =  rt_container_of(device->bus, struct hc32_spi, spi_bus);
    CM_SPI_TypeDef *spi_instance = spi_drv->config->Instance;

    if (message->cs_take && !(device->config.mode & RT_SPI_NO_CS) && (device->cs_pin != PIN_NONE))
    {
        if (device->config.mode & RT_SPI_CS_HIGH)
            rt_pin_write(device->cs_pin, PIN_HIGH);
        else
            rt_pin_write(device->cs_pin, PIN_LOW);
    }

    LOG_D("%s transfer prepare and start", spi_drv->config->bus_name);
    LOG_D("%s sendbuf: %X, recvbuf: %X, length: %d", spi_drv->config->bus_name,
          (uint32_t)message->send_buf, (uint32_t)message->recv_buf, message->length);

    message_length  = message->length;
    recv_buf        = message->recv_buf;
    send_buf        = message->send_buf;
    while (message_length)
    {
        if (message_length > 65535)
        {
            send_length     = 65535;
            message_length  = message_length - 65535;
        }
        else
        {
            send_length     = message_length;
            message_length  = 0;
        }

        /* calculate the start address */
        already_send_length = message->length - send_length - message_length;
        /* avoid null pointer problems */
        if (message->send_buf)
        {
            send_buf = (rt_uint8_t *)message->send_buf + already_send_length;
        }
        if (message->recv_buf)
        {
            recv_buf = (rt_uint8_t *)message->recv_buf + already_send_length;
        }

        if (message->send_buf && message->recv_buf)
        {
            hc32_spi_set_trans_mode(spi_instance, SPI_FULL_DUPLEX);
            if ((spi_drv->spi_dma_flag & RT_DEVICE_FLAG_DMA_TX) && (spi_drv->spi_dma_flag & RT_DEVICE_FLAG_DMA_RX))
            {
                state = hc32_spi_dma_trans(spi_drv->config, send_buf, recv_buf, send_length);
            }
            else
            {
                hc32_spi_enable(spi_instance);
                state = SPI_TransReceive(spi_instance, send_buf, recv_buf, send_length, spi_drv->config->timeout);
            }
        }
        else if (message->send_buf)
        {
            hc32_spi_set_trans_mode(spi_instance, SPI_SEND_ONLY);
            if (spi_drv->spi_dma_flag & RT_DEVICE_FLAG_DMA_TX)
            {
                state = hc32_spi_dma_trans(spi_drv->config, send_buf, RT_NULL, send_length);
            }
            else
            {
                hc32_spi_enable(spi_instance);
                state = SPI_Trans(spi_instance, send_buf, send_length, spi_drv->config->timeout);
            }
        }
        else
        {
            hc32_spi_set_trans_mode(spi_instance, SPI_FULL_DUPLEX);
            if ((spi_drv->spi_dma_flag & RT_DEVICE_FLAG_DMA_TX) && (spi_drv->spi_dma_flag & RT_DEVICE_FLAG_DMA_RX))
            {
                state = hc32_spi_dma_trans(spi_drv->config, RT_NULL, recv_buf, send_length);
            }
            else
            {
                hc32_spi_enable(spi_instance);
                state = SPI_Receive(spi_instance, recv_buf, send_length, spi_drv->config->timeout);
            }
        }
        if (state != LL_OK)
        {
            LOG_I("spi transfer error : %d", state);
            message->length = 0;
            break;
        }
        else
        {
            /* Wait for the spi transfer complete */
            if (spi_drv->spi_dma_flag & (RT_DEVICE_FLAG_DMA_TX | RT_DEVICE_FLAG_DMA_RX))
            {
                if (spi_drv->cfg->mode & RT_SPI_SLAVE)
                {
                    rt_thread_mdelay(1);
                }
                else
                {
                    u32TimeoutCnt = 0U;
                    while ((RESET == SPI_GetStatus(spi_instance, SPI_FLAG_IDLE)) &&
                            (u32TimeoutCnt < spi_drv->config->timeout))
                    {
                        rt_thread_mdelay(1);
                        u32TimeoutCnt++;
                    }
                    if (u32TimeoutCnt >= spi_drv->config->timeout)
                    {
                        LOG_I("spi transfer timeout!");
                        message->length = 0;
                        break;
                    }
                }
            }
        }
    }
    /* clear error flag */
    SPI_ClearStatus(spi_instance, SPI_FLAG_CLR_ALL);

    if (message->cs_release && !(device->config.mode & RT_SPI_NO_CS) && (device->cs_pin != PIN_NONE))
    {
        if (device->config.mode & RT_SPI_CS_HIGH)
            rt_pin_write(device->cs_pin, PIN_LOW);
        else
            rt_pin_write(device->cs_pin, PIN_HIGH);
    }

    return message->length;
}

rt_err_t rt_hw_spi_device_attach(const char *bus_name, const char *device_name, rt_base_t cs_pin)
{
    RT_ASSERT(bus_name != RT_NULL);
    RT_ASSERT(device_name != RT_NULL);

    rt_err_t result;
    struct rt_spi_device *spi_device;

    /* attach the device to spi bus*/
    spi_device = (struct rt_spi_device *)rt_malloc(sizeof(struct rt_spi_device));
    RT_ASSERT(spi_device != RT_NULL);

    result = rt_spi_bus_attach_device_cspin(spi_device, device_name, bus_name, cs_pin, RT_NULL);

    if (result != RT_EOK)
    {
        LOG_E("%s attach to %s faild, %d\n", device_name, bus_name, result);
    }

    return result;
}

void SPI1_Handler(void)
{
    hc32_spi1_err_irq_handler();
}

void SPI2_Handler(void)
{
    hc32_spi2_err_irq_handler();
}

void SPI3_Handler(void)
{
    hc32_spi3_err_irq_handler();
}
